--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
     "slug": "nook_mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icons/nook.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icons/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#8a76fe"
     },
     "assetBundlePatterns": [
       "**/*"
