--- a/package.json
+++ b/package.json
@@ -9,19 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/audio-toolkit": "^2.0.3",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/stack": "^6.3.15",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-native": "0.71.3",
-    "react-native-gesture-handler": "~2.9.0"
+    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-picker-select": "^8.0.4",
+    "react-native-select-dropdown": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.71.3",
-    "typescript": "^4.9.4"
+    "@typescript-eslint/parser": "^5.53.0",
+    "add": "^2.0.6",
+    "eslint": "^8.35.0",
+    "prettier": "^2.8.4",
+    "typescript": "^4.9.5"
   },
   "private": true
 }
