--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-select-dropdown": "^3.3.0",
-    "react-native-track-player": "^3.2.0"
+    "react-native-sound": "^0.11.2",
+    "react-native-track-player": "^3.2.0",
+    "expo-av": "~13.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
